<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE project>
<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.vaadin</groupId>
        <artifactId>vaadin-parent</artifactId>
        <version>1.1.0</version>
    </parent>

    <groupId>com.vaadin</groupId>
    <artifactId>vaadin-spring-parent</artifactId>
    <version>4.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>vaadin-spring-parent</name>
    <description>
        Parent module for Spring integration for Vaadin applications.
    </description>
    <url>https://github.com/vaadin/spring</url>

    <organization>
        <name>Vaadin Ltd</name>
        <url>http://vaadin.com</url>
    </organization>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/vaadin/spring</url>
        <connection>scm:git:git@github.com:vaadin/spring.git</connection>
        <developerConnection>scm:git:git@github.com:vaadin/spring.git</developerConnection>
    </scm>

    <developers>
        <!-- In alphabetical order -->
        <developer>
            <name>AMahdy AbdElAziz</name>
            <organization>Vaadin</organization>
            <email>amahdy7@gmail.com</email>
        </developer>
        <developer>
            <name>Chris Phillipson</name>
            <email>fastnsilver@gmail.com</email>
        </developer>
        <developer>
            <name>Henri Sara</name>
            <organization>Vaadin</organization>
            <email>hesara@vaadin.com</email>
        </developer>
        <developer>
            <name>Josh Long</name>
            <email>josh@joshlong.com</email>
        </developer>
        <developer>
            <name>Matti Tahvonen</name>
            <organization>Vaadin</organization>
            <email>matti@vaadin.com</email>
        </developer>
        <developer>
            <name>Nicolas Frankel</name>
            <email>nicolas@frankel.ch</email>
        </developer>
        <developer>
            <name>Peter Lehto</name>
            <organization>Vaadin</organization>
            <email>peter@vaadin.com</email>
        </developer>
        <developer>
            <name>Petter Holmström</name>
            <organization>Vaadin</organization>
            <email>petter@vaadin.com</email>
        </developer>
        <developer>
            <name>Patrik Lindström</name>
            <organization>Vaadin</organization>
            <email>patrik@vaadin.com</email>
        </developer>
    </developers>
    
    <properties>
        <encoding>UTF-8</encoding>
        <maven.compiler.release>17</maven.compiler.release>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <!-- These are typically overridden with BOMs -->
        <vaadin.version>8.21.0</vaadin.version>
        <spring.version>6.0.12</spring.version>
        <spring.security.version>6.1.2</spring.security.version>
        <spring.boot.version>3.1.4</spring.boot.version>

        <jakarta.servlet.version>6.0.0</jakarta.servlet.version>
        <jakarta.websocket.version>2.1.1</jakarta.websocket.version>
        <jakarta.annotation.version>2.1.1</jakarta.annotation.version>

        <slf4j.version>2.0.7</slf4j.version>
        <javassist.version>3.29.2-GA</javassist.version>

        <!-- Additional manifest fields -->
        <Vaadin-License-Title>Apache License 2.0</Vaadin-License-Title>

        <junit.version>4.13.2</junit.version>
        <jupiter.version>5.10.0</jupiter.version>
        <mockito.version>5.5.0</mockito.version>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.29.2-GA</version>
        </dependency>
        <dependency>
            <groupId>net.bytebuddy</groupId>
            <artifactId>byte-buddy</artifactId>
            <version>1.14.8</version>
          </dependency>

          <!-- slf4j override -->
          <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>license-checker</artifactId>
            <version>1.12.3</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
          </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.17</version>
                <configuration>
                    <enableRulesSummary>false</enableRulesSummary>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <configLocation>checkstyle/vaadin-checkstyle.xml</configLocation>
                    <violationSeverity>error</violationSeverity>
                    <headerLocation>checkstyle/header</headerLocation>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <excludeResources>true</excludeResources>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <inherited>true</inherited>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <id>enforce-maven-version</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.6.2</version>
                                </requireMavenVersion>          
                                <!--<dependencyConvergence />-->
                            </rules>
                            <fail>true</fail>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>
                                            org.apache.maven.plugins
                                        </groupId>
                                        <artifactId>
                                            maven-checkstyle-plugin
                                        </artifactId>
                                        <versionRange>
                                            [2.14,)
                                        </versionRange>
                                        <goals>
                                            <goal>check</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore/>
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <module>vaadin-spring</module>
        <module>vaadin-spring-security</module>
        <module>vaadin-spring-boot</module>
        <module>vaadin-spring-boot-starter</module>
    </modules>
    <repositories>
        <repository>
            <id>vaadin-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>
